# fornever.me

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  Build.ps1  CHANGELOG.md  CONTRIBUTING.md  Deploy.ps1  Directory.Build.props  Dockerfile  EvilPlanner.sln  ForneverMind.sln  ForneverMind.sln.DotSettings  LICENSE.md  LICENSE.txt  License.md  MAINTAINERSHIP.md  README.md  REUSE.toml  Readme.md  Site.hs  appveyor.yml  contact.markdown  docker-compose.ps1  fornever.db  forneverme.cabal  global.json  index.html  renovate.json  robots.py  settings.py  site.hs  urls.py  views.py
.config/: dotnet-tools.json
EvilPlanner/: .dockerignore  .gitignore  AssemblyInfo.fs  Directory.Build.props  Dockerfile  Global.asax  (+9 more)
EvilPlanner.Backend/: Application.fs  AssemblyInfo.fs  Common.fs  Configuration.fs  EvilPlanner.Backend.fsproj  Library1.fs  Production.pubxml1  Quotes.fs  Storage.fs  Web.Release.config  Web.config  packages.config
EvilPlanner.Core/: AssemblyUtils.fs  Domain.fs  EvilPlanner.Core.fsproj  Migrations.fs  Storage.fs
EvilPlanner.Data/: App.config  EvilPlanner.Data.csproj  EvilPlannerContext.cs
EvilPlanner.Frontend/: EvilPlanner.Frontend.csproj  app.ts  app.tsx  config.ts  gulpfile.js  index.html  package.json  quotation-block.tsx  tsconfig.json  tsd.json  webpack.config.js
EvilPlanner.Logic/: AssemblyInfo.fs  DatabaseExtensions.fs  EvilPlanner.Logic.fsproj  Quotations.fs  QuoteLogic.fs  packages.config
EvilPlanner.Tests/: App.config  AssemblyInfo.fs  Concurrency.fs  ConcurrencyTest.fs  EvilPlanner.Tests.fsproj  Program.fs  packages.config
(+361 files in other folders)
