name:                forneverme
version:             0.0.1.0
synopsis:            Friedrich von Never: Engineer, Programmer, Gentleman.
homepage:            https://fornever.me/
license:             MIT
license-file:        License.md
author:              Friedrich von Never
maintainer:          friedrich@fornever.me
copyright:           2015 Friedrich von Never
category:            Blog
build-type:          Simple
cabal-version:       >=1.10

executable forneverme
  main-is:             Site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base == 4.*,
                       hakyll == 4.*,
                       pandoc == 1.15.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ForNeVeR/fornever.me
